# assignment_octal

./: README.md  main.py  pyproject.toml
src/: __init__.py  config.py
src/app/: database.py  routes.py  settings.py
src/product/: schemas.py  services.py
src/product/api/: crud.py
src/users/: routes.py  services.py
src/users/dependencies/: permissions.py
src/users/schemas/: auth.py
src/users/utils/: password.py
